Add impl lc.707.